p2/configurations/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp1-ingress
spec:
  ingressClassName: nginx-webapp
  rules:
  - host: app1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp1
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp2-ingress
spec:
  ingressClassName: nginx-webapp
  rules:
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp2
            port:
              number: 80


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp3-ingress
spec:
  ingressClassName: nginx-webapp
  rules:
  - host: app3.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp3
            port:
              number: 80
